# sphinxcontrib-versioning

./: LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: ignite-docs-test.yml  tests.yml
docs/: conf.py
sphinxcontrib/versioning/: __main__.py  lib.py  routines.py  sphinx_.py
sphinxcontrib/versioning/_templates/: versions.html
sphinxcontrib_versioning/: __main__.py  git.py  lib.py  routines.py  setup_logging.py  sphinx_.py  versions.py
tests/: conftest.py  test_lib.py  test_setup_logging.py
tests/test__main__/: test_arguments.py  test_main_build_scenarios.py  test_main_push_scenarios.py
tests/test_git/: test_clone.py  test_commit_and_push.py  test_export.py  test_fetch_commits.py  test_filter_and_date.py  test_get_root.py  test_list_remote.py
tests/test_routines/: test_build_all.py  test_gather_git_info.py  test_pre_build.py  test_read_local_conf.py
tests/test_sphinx/: test_build.py  test_read_config.py
tests/test_versions/: test_misc_methods.py  test_sorting.py  test_vhasdoc_vpathto.py
